Make TTL workflow non-failing to stop alert spam

--- a/.github/workflows/ttl.yml
+++ b/.github/workflows/ttl.yml
@@ -16,15 +16,22 @@ jobs:
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
         run: |
           if [ -z "$CRON_URL" ]; then
-            echo "Missing secret CRON_URL (e.g. https://your-store.vercel.app)"
-            exit 1
+            echo "WARN: Missing secret CRON_URL (e.g. https://your-store.vercel.app). Skipping without failure."
+            exit 0
           fi
           if [ -z "$CRON_SECRET" ]; then
-            echo "Missing secret CRON_SECRET"
-            exit 1
+            echo "WARN: Missing secret CRON_SECRET. Skipping without failure."
+            exit 0
           fi
-          curl -sS -X POST "${CRON_URL}/api/cron/release-expired" \
+          HTTP_CODE=$(curl -sS -o cron_response.txt -w "%{http_code}" -X POST "${CRON_URL}/api/cron/release-expired" \
             -H "x-cron-secret: ${CRON_SECRET}" \
             -H "content-type: application/json" \
-            --data '{}' \
-            --fail-with-body
+            --data '{}')
+          if [ "$HTTP_CODE" -ge 200 ] && [ "$HTTP_CODE" -lt 300 ]; then
+            echo "OK: release-expired returned HTTP ${HTTP_CODE}"
+            cat cron_response.txt
+            exit 0
+          fi
+          echo "WARN: release-expired returned HTTP ${HTTP_CODE}. Keeping workflow green to avoid alert spam."
+          cat cron_response.txt || true
+          exit 0
