fix: utf8 page encoding + featured/catalog image consistency + email html

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ FIREBASE_PRIVATE_KEY=
 FIRESTORE_DATABASE_ID=(default)
 SMTP_USER=
 SMTP_PASS=
+EMAIL_BRAND_IMAGE_URL=
 CRON_SECRET=
 STORAGE_MODE=spark_public_only
 ADMIN_ALLOWLIST_EMAILS=
