--- a/.github/workflows/ttl.yml
+++ b/.github/workflows/ttl.yml
@@ -15,13 +15,14 @@ jobs:
           CRON_URL: ${{ secrets.CRON_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
         run: |
+          set -e
           if [ -z "$CRON_URL" ]; then
-            echo "WARN: Missing secret CRON_URL (e.g. https://your-store.vercel.app). Skipping without failure."
-            exit 0
+            echo "ERROR: Missing secret CRON_URL (e.g. https://your-store.vercel.app)."
+            exit 1
           fi
           if [ -z "$CRON_SECRET" ]; then
-            echo "WARN: Missing secret CRON_SECRET. Skipping without failure."
-            exit 0
+            echo "ERROR: Missing secret CRON_SECRET."
+            exit 1
           fi
           HTTP_CODE=$(curl -sS -o cron_response.txt -w "%{http_code}" -X POST "${CRON_URL}/api/cron/release-expired" \
             -H "x-cron-secret: ${CRON_SECRET}" \
@@ -32,6 +33,6 @@ jobs:
             cat cron_response.txt
             exit 0
           fi
-          echo "WARN: release-expired returned HTTP ${HTTP_CODE}. Keeping workflow green to avoid alert spam."
-          cat cron_response.txt || true
-          exit 0
+          echo "ERROR: release-expired returned HTTP ${HTTP_CODE}."
+          cat cron_response.txt
+          exit 1
